syntax = "proto3";

package message;

import "google/api/annotations.proto";

option go_package = "https://github.com/tredoc/go-messaging-platform/pb";

service MessageService {
    rpc GetMessageStatus (GetMessageStatusRequest) returns (GetMessageStatusResponse) {
        option (google.api.http) = {
            get: "/message/{message_id}"
        };
    }
}

message GetMessageStatusRequest {
    int64 message_id = 1;
}

message GetMessageStatusResponse {
    string status = 1;
}